<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingCartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/checkout_button_paypal_spb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkoutPayPalSpb" />

        <Button
            android:id="@+id/checkout_button_paypal_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkoutPayPalApi" />

        <Button
            android:id="@+id/product_catalog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productCatalogButtonLabel" />


        <TextView
            android:id="@+id/textview_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shopping_cart_page_description" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>